<resources>
    <string name="app_name">Antea Free Chat</string>
    <string name="accessibility_description">Free the lowest lord, let me up!</string>
    <string name="app_description">
        <![CDATA[
<b>Free the lowest lord, let me up!</b><br/>
<a href="https://www.coolapk.com/apk/161355">Antea Free Chat</a> is a tool for message encryption on online communication, available for SMS, WeChat, QQ, and so on.<br/>
Instruction: First, please ensure Antea\'s accessibility service is on. Type the trigger characters (default for "....") will trigger encryption. Click on message will trigger decryption. The default password is 123, and password and trigger characters can be customized in settings. <br/>
Security and privacy: This app uses AES encryption standard. It is <a href="https://github.com/baijifeilong/antea">open source</a>, it will not connect the Internet, and will not ask for any privilege.<br/>
Author: BaiJiFeiLong(<a href="https://baijifeilong.github.io">https://baijifeilong.github.io</a>). Email:<a href="mailto:baijifeilong@gmail.com">baijifeilong@gmail.com</a>。
        ]]>
    </string>
    <string name="switch_service">Switch</string>
    <string name="encryption_failed">Encryption failed: %s</string>
    <string name="decryption_failed">Decryption failed, wrong password</string>
    <string name="decrypted_text_copied">Decrypted text has been copied to clipboard, double tap to revert in 10 seconds:\n%s</string>
    <string name="encrypted_by_password">Encrypt by password %s(%s):\n%s</string>
    <string name="decrypted_by_password">Decrypt by password %s(%s):\n%s</string>
    <string name="clipboard_restored">Clipboard has been restored to:\n%s</string>
    <string name="current_tapped_text">Current tapped text: %s</string>
    <string name="the_default_trigger">....</string>
    <string name="pref_trigger_title">Trigger characters</string>
    <string name="pref_trigger_summary">Default is ...., input this in edit text will trigger encryption</string>
    <string name="pref_debug_title">Debug mode</string>
    <string name="pref_debug_summary">Enable debug mode to figure out some stupid bugs</string>
    <string name="pref_longer_toast_title">Longer toast</string>
    <string name="pref_longer_toast_summary">Enabled for 3.5 seconds, disabled for 2 seconds</string>
    <string name="activity_status">Status</string>
    <string name="activity_help">Help</string>
    <string name="activity_message">Messages</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_test">Test</string>
    <string name="activity_password_edit">Edit Password</string>
    <string name="activity_password_generator">Password Generator</string>
    <string name="menu_create_password">New Password</string>
    <string name="menu_edit_password">Edit Password</string>
    <string name="menu_delete_password">Delete Password</string>
    <string name="menu_clear_messages">Clear messages</string>
    <string name="test_encryption">Please append the trigger characters(%s) to trigger encryption:</string>
    <string name="test_decryption">Please tap the encrypted text to trigger description:</string>
    <string name="test_text">Slave family god outside sit room ask tao bird officer human emperor</string>
    <string name="error_occurred">Error occurred: %s</string>
    <string name="uppercase_letters">Uppercase letters</string>
    <string name="lowercase_letters">Lowercase letters</string>
    <string name="arabic_numbers">Arabic numbers</string>
    <string name="special_characters">Special characters</string>
    <string name="chinese_characters">Chinese characters</string>
    <string name="password_length">Password length</string>
    <string name="generate_password">Generate password</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard:\n%s</string>
    <string name="message_clear_success">Success clear messages!</string>
</resources>
